Add akashi repair feature in config_generator

--- a/configs/config_generator_src/Makefile
+++ b/configs/config_generator_src/Makefile
@@ -1,8 +1,7 @@
 mkfile_path := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 
 all:
-	echo $(mkfile_path)
-	gcc cJSON.c config_generator.c -o $(mkfile_path)/../config_generator
+	gcc cJSON.c scheduler.c quest.c ship_switch.c expedition.c pvp.c combat.c config_generator.c -o $(mkfile_path)/../config_generator
 
 clean:
 	rm  $(mkfile_path)/../config_generator
