--- a/configs/config.json
+++ b/configs/config.json
@@ -44,11 +44,11 @@
 		"2":	"morale:!=:0|ship:236:>=:1:>=:0:!=:0::",
 		"3":	"morale:!=:0|ship:487:>=:1:>=:0:!=:0::",
 		"4":	"morale:!=:0|ship:330:>=:1:>=:0:!=:0::",
-		"5":	"morale:!=:0|ship:1503:>=:1:>=:0:!=:0::",
-		"6":	"morale:!=:0|ship:1507:>=:1:>=:0:!=:0::"
+		"5":	"morale:!=:0|ship:-1:>=:1:>=:0:!=:0::",
+		"6":	"morale:!=:0|ship:-1:>=:1:>=:0:!=:0::"
 	},
 	"scheduler.enabled":	true,
-	"scheduler.rules":	["time:2300:stop:kcauto:", "sorties_run:1:stop:kcauto:"],
+	"scheduler.rules":	["time:2300:stop:kcauto:", "sorties_run:0:stop:combat:"],
 	"quest.enabled":	true,
 	"quest.quests":	["Bd1", "Bd2", "Bd3", "Bd4", "Bd5", "Bd6", "Bd7", "Bd8", "Bw1", "Bw2", "Bw3", "Bw4", "Bw5", "Bw6", "Bw7", "Bw8", "Bw9", "Bw10", "Bm1", "Bm2", "Bm3", "Bm4", "Bm5", "Bm6", "Bm7", "Bm8", "Bq1", "Bq2", "Bq3", "Bq4", "Bq5", "Bq6", "Bq7", "Bq8", "Bq9", "Bq10", "Bq11", "C2", "C3", "C4", "C8", "C16", "C29", "D2", "D3", "D4", "D9", "D11", "D22", "D24", "E3", "E4"]
 }
