--- a/configs/config.json
+++ b/configs/config.json
@@ -1,17 +1,20 @@
-{
+ {
 	"general.jst_offset":	0,
 	"general.interaction_mode":	"direct_control",
 	"general.chrome_dev_port":	9222,
 	"general.paused":	false,
 	"passive_repair.enabled":	true,
 	"passive_repair.repair_threshold":	1,
+	"factory.enabled":	true,
+	"factory.develop_recipe":	[100,251,250,10],
+	"factory.build_recipe":		[30, 30, 30, 30],
 	"event_reset.enabled":	true,
 	"event_reset.frequency":	3,
 	"event_reset.reset_difficulty":	3,
 	"event_reset.farm_difficulty":	2,
 	"expedition.enabled":	true,
 	"expedition.fleet_2":	[5],
-	"expedition.fleet_3":	[21],
+	"expedition.fleet_3":	[37],
 	"expedition.fleet_4":	[38],
 	"pvp.enabled":	true,
 	"pvp.fleet_preset":	3,
