--- a/configs/config.json
+++ b/configs/config.json
@@ -6,7 +6,7 @@
 	"passive_repair.enabled":	true,
 	"passive_repair.repair_threshold":	1,
 	"factory.enabled":	true,
-	"factory.develop_recipe":	[100,251,250,10],
+	"factory.develop_recipe":	[10,10,10,10],
 	"factory.build_recipe":		[30, 30, 30, 30],
 	"event_reset.enabled":	true,
 	"event_reset.frequency":	3,
@@ -54,5 +54,5 @@
 	"scheduler.enabled":	true,
 	"scheduler.rules":	["time:2300:stop:kcauto:", "sorties_run:0:stop:combat:"],
 	"quest.enabled":	true,
-	"quest.quests":	["Bd1", "Bd2", "Bd3", "Bd4", "Bd5", "Bd6", "Bd7", "Bd8", "Bw1", "Bw2", "Bw3", "Bw4", "Bw5", "Bw6", "Bw7", "Bw8", "Bw9", "Bw10", "Bm1", "Bm2", "Bm3", "Bm4", "Bm5", "Bm6", "Bm7", "Bm8", "Bq1", "Bq2", "Bq3", "Bq4", "Bq5", "Bq6", "Bq7", "Bq8", "Bq9", "Bq10", "Bq11", "C2", "C3", "C4", "C8", "C16", "C29", "D2", "D3", "D4", "D9", "D11", "D22", "D24", "E3", "E4"]
+	"quest.quests":	["Bd1", "Bd2", "Bd3", "Bd4", "Bd5", "Bd6", "Bd7", "Bd8", "Bw1", "Bw2", "Bw3", "Bw4", "Bw5", "Bw6", "Bw7", "Bw8", "Bw9", "Bw10", "Bm1", "Bm2", "Bm3", "Bm4", "Bm5", "Bm6", "Bm7", "Bm8", "Bq1", "Bq2", "Bq3", "Bq4", "Bq5", "Bq6", "Bq7", "Bq8", "Bq9", "Bq10", "Bq11", "C2", "C3", "C4", "C8", "C16", "C29", "D2", "D3", "D4", "D9", "D11", "D22", "D24", "E3", "E4", "F5", "F6", "F7", "F8"]
 }
