add auto factory support

--- a/configs/config_generator_src/Makefile
+++ b/configs/config_generator_src/Makefile
@@ -1,7 +1,7 @@
 mkfile_path := $(shell dirname $(realpath $(firstword $(MAKEFILE_LIST))))
 
 all:
-	gcc cJSON.c scheduler.c quest.c ship_switch.c expedition.c pvp.c combat.c config_generator.c -o $(mkfile_path)/../config_generator
+	gcc cJSON.c factory.c scheduler.c quest.c ship_switch.c expedition.c pvp.c combat.c config_generator.c -o $(mkfile_path)/../config_generator
 
 clean:
 	rm  $(mkfile_path)/../config_generator
