--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
+# use "sudo apt-get install python3.7-dev" first if needed
+
 flake8==3.7.8
 matplotlib==3.1.2
 numpy==1.17.4
@@ -5,3 +7,4 @@ PyChromeDevTools==0.1
 PySimpleGUI==4.14.0
 pyvisauto==1.0.3
 requests==2.22.0
+Pynput==1.7.6
