--- a/.gitignore
+++ b/.gitignore
@@ -51,4 +51,6 @@ data/temp/*.json
 !data/combat/*/*.json
 !data/quests/*.json
 !configs/template/*.json
+!configs/fleet_preset.json
+!configs/fleet_list.json
 reference/
