--- a/.gitignore
+++ b/.gitignore
@@ -46,10 +46,11 @@ venv.bak/
 *.log
 *.npz
 *.json
-data/temp/*.json
 !data/combat/*.json
 !data/combat/*/*.json
 !data/quests/*.json
 !configs/template/*.json
+!configs/fleet_list.json
+!configs/fleet_preset.json
 !data/config/*.json
 reference/
