--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,11 @@ venv.bak/
 *.log
 *.npz
 *.json
+#configs/fleet_list.json
+#configs/fleet_preset.json
 !data/combat/*.json
 !data/combat/*/*.json
 !data/quests/*.json
 !configs/template/*.json
-!configs/fleet_list.json
-!configs/fleet_preset.json
 !data/config/*.json
 reference/
