update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -51,6 +51,8 @@ venv.bak/
 !data/combat/*.json
 !data/combat/*/*.json
 !data/quests/*.json
+!data/expedition/*.json
 !configs/template/*.json
 !data/config/*.json
 reference/
+tool/x_packer.sh
