--- a/.gitignore
+++ b/.gitignore
@@ -46,11 +46,10 @@ venv.bak/
 *.log
 *.npz
 *.json
-#configs/fleet_list.json
-#configs/fleet_preset.json
 !data/combat/*.json
 !data/combat/*/*.json
 !data/quests/*.json
 !configs/template/*.json
+!configs/template/sortie_mode_auto/*.json
 !data/config/*.json
 reference/
