config_cui_template update

--- a/data/config/config_cui_template.json
+++ b/data/config/config_cui_template.json
@@ -1,6 +1,6 @@
 {
     "combat.check_fatigue": true,
-    "combat.check_lbas_fatigue": false,
+    "combat.check_lbas_fatigue": true,
     "combat.clear_stop": false,
     "combat.enabled": false,
     "combat.fleet_mode": "standard",
@@ -11,17 +11,19 @@
     "combat.lbas_groups": [],
     "combat.node_formations": [],
     "combat.node_night_battles": [],
-    "combat.node_selects": [],
+    "combat.node_selects": [
+    ],
+    "combat.override": false,
     "combat.port_check": false,
     "combat.push_nodes": [],
     "combat.repair_limit": 3,
-    "combat.repair_timelimit_hours": 1,
+    "combat.repair_timelimit_hours": 0,
     "combat.repair_timelimit_minutes": 0,
     "combat.reserve_repair_dock": true,
     "combat.retreat_limit": 4,
     "combat.retreat_points": [],
     "combat.sortie_map": "1-1",
-    "event_reset.enabled": true,
+    "event_reset.enabled": false,
     "event_reset.farm_difficulty": 2,
     "event_reset.frequency": 3,
     "event_reset.reset_difficulty": 3,
@@ -29,24 +31,27 @@
     "expedition.fleet_2": [],
     "expedition.fleet_3": [],
     "expedition.fleet_4": [],
+    "expedition.fleet_preset": null,
     "factory.build_recipe": [
         30,
         30,
         30,
         30
     ],
+    "factory.build_secretary": 1925,
     "factory.develop_recipe": [
+        100,
         10,
-        10,
-        10,
+        200,
         10
     ],
+    "factory.develop_secretary": 3720,
     "factory.enabled": true,
     "general.chrome_dev_port": 9222,
     "general.interaction_mode": "chrome_driver",
     "general.jst_offset": 0,
     "general.paused": false,
-    "passive_repair.enabled": true,
+    "passive_repair.enabled": false,
     "passive_repair.repair_threshold": 1,
     "passive_repair.slots_to_reserve": 2,
     "pvp.enabled": false,
@@ -79,11 +84,18 @@
         "Bq1",
         "Bq3",
         "Bq4",
-        "Bq8",
+        "Bq6",
         "Bq9",
-        "Bq10",
         "Bq11",
         "Bq12",
+        "By2",
+        "By3",
+        "By4",
+        "By5",
+        "By6",
+        "By7",
+        "By8",
+        "By9",
         "C2",
         "C3",
         "C4",
@@ -104,10 +116,10 @@
         "F7",
         "F8"
     ],
-    "scheduler.enabled": false,
+    "scheduler.enabled": true,
     "scheduler.rules": [
-        "time:0200:stop:kcauto:",
-        "sorties_run:15:stop:combat:"
+        "time:0230:stop:kcauto",
+        "sorties_run:15:stop:combat"
     ],
     "ship_switcher.enabled": false,
     "ship_switcher.slots": {}
